2013-01-02  Julien Bect  <julien.bect@supelec.fr>

	Added a script to generate the HTML documentation.

	* stk_makedoc.m: new script

	Fixed a bug in M2HTML (affecting option 'ignoredDir').

	* misc/m2html/m2html.m: modified

	Added M2HTML version 1.5 (by Guillaume Flandin).

	* misc/m2html: new

	Removing folder ./htmldoc (to be generated when creating the
	maintenance branch for a new release).

	* htmldoc: removed

2012-12-31  Julien Bect  <julien.bect@supelec.fr>

	Fixing bugs in stk_test() and stk_runtests().

	* misc/test/stk_runtests.m: modified
	* misc/test/stk_test.m: modified

2012-12-16  Julien Bect  <julien.bect@supelec.fr>

	Modified stk_runtests() to browse through private folders and
	class(@) folders.

	* misc/test/stk_runtests.m: modified

	Fixed a typo.

	* misc/test/stk_runtests.m: modified

2012-12-14  Benoit Jan  <benoit.jan@supelec.fr>

	Fixed a bug in stk_make_matcov's "parfor" private functions.

	* core/private/stk_make_matcov_inter_parfor.m: modified
	* core/private/stk_make_matcov_auto_parfor.m: modified

2012-12-14  Julien Bect  <julien.bect@supelec.fr>

	Fixing a bug affecting stk_predict() in the 'blocked' case.

	* core/stk_predict.m: modified

2012-12-07  Julien Bect  <julien.bect@supelec.fr>

	Minor improvement in stk_runexamples.

	* misc/test/stk_runexamples.m: modified

2012-12-06  Julien Bect  <julien.bect@supelec.fr>

	Removed some internal ".a" fields.

	* core/stk_ortho_func.m: modified
	* core/stk_make_matcov.m: modified

2012-12-05  Julien Bect  <julien.bect@supelec.fr>

	Modified stk_predict() to make it work with non-stationary
	covariance functions.

	* core/stk_predict.m: modified

	Added a "pairwise" option to stk_make_matcov().

	* core/stk_make_matcov.m: modified

2012-12-04  Julien Bect  <julien.bect@supelec.fr>

	Added a "pairwise" option to all covariance functions.

	* covfcs/stk_materncov*.m: modified

2012-12-02  Julien Bect  <julien.bect@supelec.fr>

	Added a new MEX-file to compute distances "pairwise" (i.e.,