@@ -116,15 +116,21 @@ end
 %%
 % Check error for incorrect number of input arguments
 
-%!shared n, dim, box, niter
+%!shared x, n, dim, box, niter
 %! n = 20; dim = 2; box = [0, 0; 1, 1]; niter = 1;
 
-%!error stk_sampling_maximinlhs();
-%!error stk_sampling_maximinlhs(n);
-%!test  stk_sampling_maximinlhs(n, dim);
-%!test  stk_sampling_maximinlhs(n, dim, box);
-%!test  stk_sampling_maximinlhs(n, dim, box, niter);
-%!error stk_sampling_maximinlhs(n, dim, box, niter, pi);
+%!error x = stk_sampling_maximinlhs();
+%!error x = stk_sampling_maximinlhs(n);
+%!test  x = stk_sampling_maximinlhs(n, dim);
+%!test  x = stk_sampling_maximinlhs(n, dim, box);
+%!test  x = stk_sampling_maximinlhs(n, dim, box, niter);
+%!error x = stk_sampling_maximinlhs(n, dim, box, niter, pi);
+
+%% 
+% Check that the output is a struct with a numeric '.a' field
+% (all stk_sampling_* functions should behave similarly in this respect)
+
+%!test assert(isstruct(x) && isnumeric(x.a));
 
 %%
 % Check output argument
@@ -132,7 +138,6 @@ end
 %!test
 %! for dim = 1:5,
 %!   x = stk_sampling_randomlhs(n, dim);
-%!   assert(isstruct(x) && isnumeric(x.a));
 %!   assert(isequal(size(x.a), [n dim]));
 %!   u = x.a(:);
 %!   assert(~any(isnan(u) | isinf(u)));
