@@ -1,3 +1,14 @@
+2013-01-03  Julien Bect  <julien.bect@supelec.fr>
+
+	Restored '.a' outputs for all stk_sampling_* functions and
+	streamlined unit tests for that.
+
+	* sampling/stk_sampling_olhs.m: modified
+	* sampling/stk_sampling_randunif.m: modified
+	* sampling/stk_sampling_regulargrid.m: modified
+	* sampling/stk_sampling_randomlhs.m: modified
+	* sampling/stk_sampling_maximinlhs.m: modified
+
 2013-01-02  Julien Bect  <julien.bect@supelec.fr>
 
 	Added a script to generate the HTML documentation.
